--- a/index.html
+++ b/index.html
@@ -3,16 +3,36 @@
     <head>
         <meta charset="utf-8"/>
         <title></title>
-        <link rel="stylesheet" href="styles/main.css"/>
+        <link rel="stylesheet" href="styles/bootstrap.min.css"/>
+        <link rel="stylesheet" href="styles/style.css"/>
     </head>
     <body>
     <div class="container">
+        <h1>Simple Password Strength Checker</h1>
+        <p class="lead">Type your password:</p>
         <input type="password" name="pass" id="pass" />
         <span id="pass-result"></span>​
+        
+        <div class="examples">
+            <h2 class="subtitle">Options</h2>
+            <p>You can initialize the plugin by simple calling the method in the jQuery object</p>
+            <pre><code>$('selector').strongPass();</code></pre>
+            <p>And you can also customize the messages that apear for each case:</p>
+            <pre><code>$('selector').strongPass({
+    strong: 'Strong Password!',
+    medium: 'Not so strong...',
+    weak: 'You can\'t be serious',
+});</code></pre>
+            <p>By default the plugin will create a span to display the warnings, you can specify your own selector in the options: </p>
+            <pre><code>$('selector').strongPass({
+    warning: '#pass-result'
+});
+        </div>
     </div>
 
-    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.0/jquery.min.js"></script>
-    <script>window.jQuery || document.write('<script src="scripts/vendor/jquery.min.js"><\/script>')</script>
+    <script src="scripts/jquery-1.8.2.min.js"></script>
     <script src="scripts/strongpass.js"></script>
+    <script src="scripts/main.js"></script>
+
     </body>
 </html>
