--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <h2 class="subtitle">Options</h2>
             <p>You can initialize the plugin by simple calling the method in the jQuery object</p>
             <pre><code>$('selector').strongPass();</code></pre>
-            <p>And you can also customize the messages that apear for each case:</p>
+            <p>And you can also customize the messages that appear for each case:</p>
             <pre><code>$('selector').strongPass({
     strong: 'Strong Password!',
     medium: 'Not so strong...',
@@ -26,7 +26,10 @@
             <p>By default the plugin will create a span to display the warnings, you can specify your own selector in the options: </p>
             <pre><code>$('selector').strongPass({
     warning: '#pass-result'
-});
+});</code></pre>
+        </div>
+        <div>
+            <p>Download the plugin from <a href="https://github.com/laantorchaweb/strongpass/">github.com/laantorchaweb/strongpass</a>
         </div>
     </div>
 
