--- a/index.html
+++ b/index.html
@@ -26,8 +26,10 @@
             <p>By default the plugin will create a span to display the warnings, you can specify your own selector in the options: </p>
             <pre><code>$('selector').strongPass({
     warning: '#pass-result'
-});
+});</code></pre>
         </div>
+        
+        
     </div>
 
     <script src="scripts/jquery-1.8.2.min.js"></script>
